Update with a intelligent game example

--- a/example/index-intelligent.html
+++ b/example/index-intelligent.html
@@ -17,7 +17,8 @@
 
 <!-- TapAI Game -->
 <script src="../dist/js/TapAI/layout.js"></script>
-<script src="../dist/js/TapAI/logic.js"></script>
+<!-- <script src="../dist/js/TapAI/logic.js"></script> -->
+<script src="../dist/js/TapAI/AIlogic.js"></script>
 <script src="../dist/js/TapAI/game.js"></script>
 
 <!-- To Save CSV -->
@@ -31,9 +32,9 @@
 <div class="row">
 <div class="col-sm-offset-3 col-sm-6">
 <div class="well">
-
-	<h4>Example: Normal Game</h4>
-	<p>This is an example of normal game.</p>
+	
+	<h4>Example: Intelligent Game</h4>
+	<p>In this game the difficulty is adjusted by the reaction performance.</p>
 
 	<svg id="tap-game"></svg>
 	
