Update readme with more infos and link to online example. Also add footer on examples.

--- a/example/index.html
+++ b/example/index.html
@@ -37,6 +37,8 @@
 
 	<svg id="tap-game"></svg>
 	
+	<p class="footer">Projected by <a href="http://leonardomauro.com/" target="_blank" data-toggle="tooltip" title="My Website">Leonardo Mauro</a> - <a href="https://github.com/leomaurodesenv/TapAI" target="_blank" data-toggle="tooltip" title="GitHub repository">GitHub</a></p>
+	
 </div>
 </div>
 </div>
