--- a/example/index-intelligent.html
+++ b/example/index-intelligent.html
@@ -37,6 +37,8 @@
 	<p>In this game the difficulty is adjusted by the reaction performance.</p>
 
 	<svg id="tap-game"></svg>
+
+	<p class="footer">Projected by <a href="http://leonardomauro.com/" target="_blank" data-toggle="tooltip" title="My Website">Leonardo Mauro</a> - <a href="https://github.com/leomaurodesenv/TapAI" target="_blank" data-toggle="tooltip" title="GitHub repository">GitHub</a></p>
 	
 </div>
 </div>
