Rename files, edit js for each example.

--- a/example/2-index-ai-sample.html
+++ b/example/2-index-ai-sample.html
@@ -17,8 +17,7 @@
 
 <!-- TapAI Game -->
 <script src="../dist/js/TapAI/layout.js"></script>
-<!-- <script src="../dist/js/TapAI/logic.js"></script> -->
-<script src="../dist/js/TapAI/AIlogic.js"></script>
+<script src="../dist/js/TapAI/2-ai-sample/logic.js"></script>
 <script src="../dist/js/TapAI/game.js"></script>
 
 <!-- To Save CSV -->
